Test Maven stage